fix: 🟢🟡🔴user status not update realtime

--- a/app-ng/src/app/features/chat/components/chat-header/chat-header.component.html
+++ b/app-ng/src/app/features/chat/components/chat-header/chat-header.component.html
@@ -16,7 +16,7 @@
         {{ forContact.chatName }}
       </p>
       <p *ngIf="isOnline" class="text-xs">
-        <span *ngIf="forContact.type == 'group'">{{onlinesCount}} Pepele</span>
+        <span *ngIf="forContact.type == 'group'">{{onlinesCount}} People</span>
         <span *ngIf="forContact.type == 'private'">Online</span>
       </p>
       <p *ngIf="!isOnline" class="text-xs">Offline</p>
